--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <h1>Stock Predictor</h1>
     <form id="prediction-form">
         <label for="ticker">Stock Ticker:</label>
-        <input type="text" id="ticker" name="ticker" value="AAPL">
+        <input type="text" id="ticker" name="ticker">
         <button type="submit">Predict</button>
     </form>
     <div id="result"></div>
